--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>Вы успешно создали конвейер, который извлекает это исходное приложение из GitHub, и с помощью AWS Elastic Beanstalk развернули его в инстансе Amazon EC2. Теперь вы на шаг ближе к внедрению непрерывного освоения в свою практику!
+    <h2>Вы успешно создали конвейер №1, который извлекает это исходное приложение из GitHub, и с помощью AWS Elastic Beanstalk развернули его в инстансе Amazon EC2. Теперь вы на шаг ближе к внедрению непрерывного освоения в свою практику!
 </h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
